--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://github.com/rnthking/chatgpt.github.io
+url: https://rnthking.github.io/chatgpt.github.io/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -101,8 +101,8 @@ theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
-deploy:
-  # type: 'git'
-  # repo: 'https://github.com/rnthking/chatgpt.github.io.git'
-  # branch: 'main'
-  
+# deploy:
+#   type: 'git'
+#   repo: 'https://github.com/rnthking/chatgpt.github.io.git'
+#   branch: 'gh-pages'
+#   token: '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'
